# seattle-code-python-401n4

class-00-cc-dsa-template/: README.md
class-1/demo/: README.md
class-1/game/: game.py  pyproject.toml
class-10/: README.md
class-11/: warm-up.md
class-11/warmup/: warmup.py
class-12/: cereal-story.ipynb
class-2/fizz-buzz/: pyproject.toml
class-2/fizz-buzz/tests/: test_fizz_buzz.py
class-2/rec_demo/: recursion_module.py  test_recursion_module.py
class-6/mock_wb/: mock.md
class-6/version_1/: test_roll_dice.py
class-7/testing-io/: pyproject.toml
class-7/testing-io/testing_io/: dice.py
class-8/: README.md  main.py  warmup.py
class-9/: warmup.py
class-9/game-of-greed/: bot_for_class.py
class_01/demo/: pyproject.toml
class_02/name_demo/: first.py
class_02/rec_demo/: pyproject.toml
class_03/warmup/: warmup.py
class_06/mock_wb/: ll.py
class_06/warm-up/: randon.py
class_09/: README.md
class_17/: README.md  warmup.py
class_18/: warmup.md  warmup_solution.py
class_28/: warmup.py
class_29/thing/: pyproject.toml
class_29/thing/accounts/migrations/: 0002_alter_customuser_id.py
class_29/thing/config/: settings.py  urls.py
class_29/thing/templates/things/: things-create.html  things-delete.html  things-detail.html  things-list.html  things-update.html
class_29/thing/things/: models.py  urls.py  views.py
class_29/thing/things/migrations/: 0001_initial.py
class_30/: README.md
class_32/: lambd.py
class_36/: README.md  bst_prob.py  ll_remove.py  set_test.py
class_37/: README.md
class_39/: warmup.py
class_42/: README.md
(+145 files in other folders)
