[tool.poetry]
name = "testing-io"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>", "Roger Huba <rogerhuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = "^19.10b0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
